<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                tools:text="当前版本：4.1" />

            <TextView
                android:id="@+id/about_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="18dp"
                android:text="@string/about_Introduction"
                android:textSize="14sp" />

            <Button
                android:id="@+id/about_likegank"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="#fff"
                android:text="@string/about_like_github"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/about_gank"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/about_gankapi_url" />

            <Button
                android:id="@+id/about_girls"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/about_meizi_github" />

            <Button
                android:id="@+id/about_license"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/open_license" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>