<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@android:color/transparent"
            app:theme="@style/ToolbarAppThem" />

        <View
            android:id="@+id/bottom_shadow"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/shadow"
            android:visibility="gone" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                tools:text="当前版本：4.1" />

            <TextView
                android:id="@+id/about_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="18dp"
                android:text="@string/about_Introduction"
                android:textSize="14sp" />

            <Button
                android:id="@+id/about_likegank"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="#fff"
                android:text="@string/about_like_github"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/about_gank"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/about_gankapi_url" />

            <Button
                android:id="@+id/about_meizi"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/about_meizi_github" />

            <Button
                android:id="@+id/about_open_license"
                style="@style/About_Button"
                android:layout_margin="8dp"
                android:background="#fff"
                android:text="@string/open_license" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>